Archive2/e1/6d249679a71d0c/output
main.cpp:15:20: error: constexpr variable 'foo<bool *>' must be initialized by a constant expression
constexpr bool foo{is_pointer<T>};
                  ~^~~~~~~~~~~~~~
main.cpp:19:14: note: in instantiation of variable template specialization 'foo<bool *>' requested here
    auto y = foo<bool*>;
             ^
1 error generated.
